--- a/css/main.css
+++ b/css/main.css
@@ -935,7 +935,7 @@ footer .social i{
   position: fixed;
   background: rgba(0, 0, 0, .4);
   z-index: 1000;
-  height: 100%;
+  height: 100vh;
 }
 
 .cont-modal{
